# btsnoop-parser

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  btsnoop_hci_table.py  pyproject.toml
.github/workflows/: ci.yml
btsnoop_parser/: __init__.py  analysis.py  cli.py  constants.py  core.py  hci_decoder.py  pcap.py
docs/: api.rst  cli.rst  conf.py  index.rst
tests/: test_analysis.py  test_cli.py  test_filter_pcap.py  test_parser.py
